--- a/po/cs/kghostview.po
+++ b/po/cs/kghostview.po
@@ -2,17 +2,16 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: kghostview\n"
 "POT-Creation-Date: 1998-01-05 22:02+0100\n"
-"PO-Revision-Date: 1997-10-18 17:52 MET DST\n"
+"PO-Revision-Date: 1998-01-22 08:58 MET\n"
 "Last-Translator: Miroslav Flídr <flidr@kky.zcu.cz>\n"
-"Language-Team: czech <LL@li.org>\n"
+"Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: copyright.cpp:28
 msgid "Copyright"
@@ -62,7 +61,7 @@ msgstr "Strana"
 #: kghostview.cpp:2200 kghostview.cpp:2205 kghostview.cpp:2471
 #, c-format
 msgid "of %d"
-msgstr "z %s"
+msgstr "z %d"
 
 #: info.cpp:58
 msgid "File :"
