--- a/po/cs/kpaint.po
+++ b/po/cs/kpaint.po
@@ -6,12 +6,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
 "POT-Creation-Date: 1998-01-05 22:01+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
+"PO-Revision-Date: 1998-01-22 08:58 MET\n"
 "Last-Translator: Miroslav Flídr <flidr@kky.zcu.cz>\n"
-"Language-Team: czech <LL@li.org>\n"
+"Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: app.cpp:40
 msgid ""
