--- a/po/pl/kdvi.po
+++ b/po/pl/kdvi.po
@@ -431,8 +431,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Markku Hihnala <mah@ee.oulu.fi>"
-"\n"
+"Markku Hihnala <mah@ee.oulu.fi>\n"
 "Polskie t³umaczenie\n"
 "(C) 1997 Piotr Roszatycki"
 
