--- a/po/fi/kdvi.po
+++ b/po/fi/kdvi.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: Kim Enkovaara <kim.enkovaara@iki.fi>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
 #: dviwin.cpp:216 dviwin.cpp:232 dviwin.cpp:246 dviwin.cpp:283 dviwin.cpp:300
@@ -229,7 +229,7 @@ msgstr "Valitse sivu ja merkkaa sivuja tulostukseen"
 
 #: kdvi.cpp:323
 msgid "X:0000, Y:0000 "
-msgstr ""
+msgstr "X:0000, Y:0000 "
 
 #: kdvi.cpp:325
 msgid "Shrink: xx"
@@ -437,6 +437,9 @@ msgid ""
 "\n"
 "Markku Hihnala <mah@ee.oulu.fi>"
 msgstr ""
+"\n"
+"\n"
+"Markku Hihnala <mah@ee.oulu.fi>"
 
 #: kdvi.cpp:874
 msgid "Page: "
