--- a/po/fi/kghostview.po
+++ b/po/fi/kghostview.po
@@ -11,12 +11,12 @@ msgstr ""
 "Last-Translator: Kim Enkovaara <kim.enkovaara@iki.fi>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
 #: copyright.cpp:27
 msgid "Copyright"
-msgstr ""
+msgstr "Copyright"
 
 #: copyright.cpp:41
 msgid ""
@@ -116,7 +116,7 @@ msgstr "Oletukset"
 
 #: interpreter.cpp:337
 msgid "gs"
-msgstr ""
+msgstr "gs"
 
 #: kghostview.cpp:190 kghostview.cpp:304 kghostview.cpp:360 kghostview.cpp:449
 msgid "View Control"
@@ -181,19 +181,19 @@ msgstr "&Tulosta"
 
 #: kghostview.cpp:489
 msgid "&1."
-msgstr ""
+msgstr "&1."
 
 #: kghostview.cpp:490
 msgid "&2."
-msgstr ""
+msgstr "&2."
 
 #: kghostview.cpp:491
 msgid "&3."
-msgstr ""
+msgstr "&3."
 
 #: kghostview.cpp:492
 msgid "&4."
-msgstr ""
+msgstr "&4."
 
 #: kghostview.cpp:502
 msgid "Zoom &in"
@@ -301,7 +301,7 @@ msgstr "&Ohje sovelluksesta"
 
 #: kghostview.cpp:576
 msgid "&Copyright"
-msgstr ""
+msgstr "&Copyright"
 
 #: kghostview.cpp:583
 msgid "&Go"
@@ -467,19 +467,19 @@ msgstr "%d:tä  "
 
 #: kghostview.cpp:2300
 msgid "&1. "
-msgstr ""
+msgstr "&1. "
 
 #: kghostview.cpp:2304
 msgid "&2. "
-msgstr ""
+msgstr "&2. "
 
 #: kghostview.cpp:2308
 msgid "&3. "
-msgstr ""
+msgstr "&3. "
 
 #: kghostview.cpp:2312
 msgid "&4. "
-msgstr ""
+msgstr "&4. "
 
 #: kghostview.cpp:2440
 msgid "Sc.1 "
